--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
+header  h1{
+  margin: auto;
+  width: 25%;
+}
+
+header nav {
+  margin: auto;
+  width: 35%;
+}
+
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background: rgba(199, 198, 198, 0.938);
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section figcaption {
+  text-align: center;
+  font-size: 13px;
+}
+
+#featured-property p {
+  margin: auto;
+  text-align: center;
+  width: 800px;
+  word-spacing: 2px;
+}
+
+#details div {
+  float: left;
+  width: 25%;
+  background-color: red;
+  text-align: center;
+}
+
 body {
   width: 100%;
   height: 100%;
